[gd_scene load_steps=11 format=3 uid="uid://dua0nnlbpcojq"]

[ext_resource type="Script" uid="uid://cbg02t08nqvoj" path="res://0yak_scenes/ui/main_menu.gd" id="1_f0de3"]
[ext_resource type="FontFile" uid="uid://ch6l2owvyg8d" path="res://0yak__assets/fonts/DalekPinpointBold.ttf" id="1_ttvqm"]
[ext_resource type="FontFile" uid="uid://dfd6bwkg8val1" path="res://0yak__assets/fonts/Coolvetica Rg.otf" id="2_f0de3"]

[sub_resource type="Shader" id="Shader_f0de3"]
code = "shader_type canvas_item;

uniform vec4 color_top : source_color = vec4(0.1, 0.2, 0.2, 1.0);
uniform vec4 color_bottom : source_color = vec4(0.02, 0.02, 0.05, 1.0);
uniform float noise_strength : hint_range(0.0, 0.1) = 0.02;

void fragment() {
	vec4 gradient = mix(color_bottom, color_top, UV.y);
	
	// Subtle noise/grain
	float noise = fract(sin(dot(UV * TIME * 0.1, vec2(12.9898, 78.233))) * 43758.5453);
	gradient.rgb += noise * noise_strength;
	
	COLOR = gradient;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f0de3"]
shader = SubResource("Shader_f0de3")
shader_parameter/color_top = Color(0.1, 0.1, 0.2, 1)
shader_parameter/color_bottom = Color(0.02, 0.02, 0.05, 1)
shader_parameter/noise_strength = 0.02

[sub_resource type="SystemFont" id="SystemFont_1vkh8"]

[sub_resource type="Theme" id="Theme_1vkh8"]
default_font = SubResource("SystemFont_1vkh8")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l4hvk"]
bg_color = Color(0, 0, 0, 0.533333)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0jawg"]
content_margin_left = 0.0
content_margin_top = 8.0
content_margin_right = 0.0
content_margin_bottom = 8.0
bg_color = Color(0, 0, 0, 0.266667)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0jawg"]
content_margin_right = 8.0
content_margin_bottom = 8.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f0de3")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_f0de3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.345467, 0.623863, 0.738473, 1)

[node name="VerticalCenterContainer" type="VBoxContainer" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.5
offset_top = -40.0
offset_right = 163.5
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="VerticalCenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_ttvqm")
theme_override_font_sizes/font_size = 72
text = "AXE HUNTER
"
vertical_alignment = 1

[node name="StartButton" type="Button" parent="VerticalCenterContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = SubResource("Theme_1vkh8")
theme_override_fonts/font = ExtResource("2_f0de3")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_l4hvk")
theme_override_styles/normal = SubResource("StyleBoxFlat_0jawg")
text = "Start Game"

[node name="ExitButton" type="Button" parent="VerticalCenterContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = SubResource("Theme_1vkh8")
theme_override_fonts/font = ExtResource("2_f0de3")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_l4hvk")
theme_override_styles/normal = SubResource("StyleBoxFlat_0jawg")
text = "Exit Game"

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.513726)
theme_override_fonts/font = ExtResource("2_f0de3")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_0jawg")
text = "v0.1.2"
